--- a/app/src/main/res/drawable-mdpi/outline_primary.xml
+++ b/app/src/main/res/drawable-mdpi/outline_primary.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryDark">
+        android:color="@color/colorPrimary">
     </stroke>
     <solid android:color="@color/transparent"/>
     <corners
