--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,7 +57,7 @@
     <color name="colorAccentBlue">#03a9f4</color>
 
     <color name="textColorPrimary">#212121</color>
-    <color name="textColorPrimaryDark">#757575</color>
+    <color name="textColorPrimaryDark">#8C98A9</color>
     <color name="textColorPrimaryLight">#bfbfbf</color>
     <color name="textColorSecondary">#757575</color>
     <color name="textColorSecondaryDark">#212121</color>
