--- a/app/src/main/res/navigation/auth_navigation.xml
+++ b/app/src/main/res/navigation/auth_navigation.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_loginFragment_to_PINManagerFragment"
             app:destination="@id/PINManagerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_getStartedSignUpFragment"
+            app:destination="@id/getStartedSignUpFragment" />
     </fragment>
 
     <fragment
