--- a/app/src/main/res/layout/wallet_home.xml
+++ b/app/src/main/res/layout/wallet_home.xml
@@ -32,9 +32,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="#f4fafe"
         app:labelVisibilityMode="labeled"
-        app:itemRippleColor="@color/gray_gray"
+        app:itemRippleColor="#2D84B72B"
         app:itemIconTint="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_shop"
        app:itemTextAppearanceInactive="@style/BottomNavigationView"
@@ -50,9 +50,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="#f4fafe"
         app:labelVisibilityMode="labeled"
-        app:itemRippleColor="@color/gray_gray"
+        app:itemRippleColor="#2D84B72B"
         app:itemIconTint="@android:color/transparent"
         app:itemTextAppearanceInactive="@style/BottomNavigationView"
         app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
