--- a/app/src/main/res/drawable/badge_background.xml
+++ b/app/src/main/res/drawable/badge_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@color/colorPrimaryDark"/>
     <corners android:radius="15dp"/>
-    <stroke android:color="@android:color/white" android:width="1dp"/>
+    <stroke android:color="@color/colorPrimaryDark" android:width="1dp"/>
 
 </shape>
