--- a/app/src/main/res/layout/buy_inputs_animated_ic_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_animated_ic_cart.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:src="@drawable/ic_card"
+        android:src="@drawable/ic_bn_shopping_basket"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         android:paddingEnd="@dimen/dimen_5dp"
         android:textStyle="bold"
         android:text="0"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline41"
