--- a/app/src/main/res/menu/cart_menu.xml
+++ b/app/src/main/res/menu/cart_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/ic_cart_item"
         android:actionLayout="@layout/buy_inputs_animated_ic_cart"
-        android:icon="@drawable/ic_card"
+        android:icon="@drawable/ic_bn_shopping_basket"
         android:title="@string/actionCart"
         app:showAsAction="always" />
 
