--- a/app/src/main/res/layout/login_dialog_otp.xml
+++ b/app/src/main/res/layout/login_dialog_otp.xml
@@ -7,6 +7,7 @@
     android:background="#DDF1FD">
 
     <TextView
+        android:id="@+id/tv_timer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -138,12 +139,14 @@
             android:alpha=".75"/>
     </LinearLayout>
         <RelativeLayout
+            android:id="@+id/layout_resend_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
 
             <TextView
