--- a/app/src/main/res/layout/fragment_token_auth.xml
+++ b/app/src/main/res/layout/fragment_token_auth.xml
@@ -62,6 +62,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="14sp"
+            android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
         <EditText
