--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -120,7 +120,7 @@
                                     android:gravity="center"
                                     android:text="+256"
                                     android:textColor="#303030"
-                                    android:textSize="12sp"
+                                    android:autoSizeMaxTextSize="12sp"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="6dp"
                                     app:drawableEndCompat="@drawable/ic_chevron_down"
