--- a/app/src/main/res/layout/new_fragment_buy_home.xml
+++ b/app/src/main/res/layout/new_fragment_buy_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#f4fafe">
+    android:background="#F4FAFE">
 
     <FrameLayout
         android:id="@+id/nav_host_fragment"
