--- a/app/src/main/res/drawable/rectangular_red_solid.xml
+++ b/app/src/main/res/drawable/rectangular_red_solid.xml
@@ -4,7 +4,7 @@
     <item android:top="2dp" android:left="2dp" android:right="2dp" android:bottom="2dp">
         <shape android:shape="rectangle">
             <corners android:radius="3dp" />
-            <solid android:color="#C42947" />
+            <solid android:color="#FF5353" />
         </shape>
     </item>
 
