--- a/app/src/main/res/layout/fragment_token_auth.xml
+++ b/app/src/main/res/layout/fragment_token_auth.xml
@@ -12,7 +12,7 @@
     tools:context=".fragments.wallet_fragments.TokenAuthFragment">
 
     <ImageView
-        android:id="@+id/produce_close"
+        android:id="@+id/token_auth_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@id/pin_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/produce_close" />
+        app:layout_constraintTop_toBottomOf="@+id/token_auth_close" />
 
     <LinearLayout
         android:id="@+id/pin_layout"
@@ -77,7 +77,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="14sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
         <EditText
@@ -92,7 +92,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="14sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
         <EditText
@@ -107,7 +107,7 @@
             android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="14sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:cursorVisible="false"/>
 
     </LinearLayout>
